<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="qty">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="app_name">TabletBookMyTable</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tap_your_device">TapYourDeviceActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_sub_menu">SubMenuActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="check_in">CHECK IN</string>
    <string name="tap">Tap Your Device</string>
    <string name="order">ORDER</string>
    <string name="checkout">CHECKOUT</string>
    <string name="dummy_section_text">dummy_section_text</string>
    <string name="pay_now">Pay Now!</string>
    <string name="title_section1">AAA</string>
    <string name="title_section2">BBB</string>
    <string name="title_section3">CCC</string>
    <string name="tip">00.00</string>
    <string name="payment">Payment Details</string>
    <string name="bill_details">        \t\t--------------------------------------------------------------------------------------------------\n
       \t\t\t \t1\t\t\tx\t\t\tPizza\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t$11.99\n
       \t\t\t \t2\t\t\tx\t\t\tPasta\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t$15.98\n
       \t\t\t \t2\t\t\tx\t\t\tBruschetta\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t$11.98\n
    \t\t--------------------------------------------------------------------------------------------------\n
    \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tSubtotal:\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t$39.95\n
    \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tTax:\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t$03.95\n
        \t\t--------------------------------------------------------------------------------------------------\n
     \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tGrandtotal:\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t$43.90\n
     \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tTip:\n</string>
    <string name="bill_details_final">     \t\t--------------------------------------------------------------------------------------------------\n
         \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tPayment Amount:\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t$48.90\n
           \t\t--------------------------------------------------------------------------------------------------\n</string>
    <string name="title_activity_place_order">PlaceOrderActivity</string>
    <string name="title_activity_greetings">GreetingsActivity</string>

</resources>
