<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true"
    tools:context=".PaymentActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:alpha="1"
        android:contentDescription="@string/pay_now"
        android:gravity="bottom"
        android:scaleType="fitXY"
        android:src="@drawable/tablet_header_image" />

    <Button
        android:id="@+id/button1"
        style="@style/pay_button_tablet"
        android:layout_gravity="center"
        android:text="@string/pay_now" />

    <TextView
        style="@style/main_button_tablet"
        android:layout_marginTop="80dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:background="@color/tap_color"
        android:padding="10dp"
        android:text="@string/payment"
        android:textSize="30sp" />
    
        <TextView
        style="@style/main_button_tablet"
        android:layout_marginTop="140dp"
        android:gravity="left"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@color/tap_color"
        android:padding="10dp"
        android:text="@string/bill_details"
        android:textSize="25sp" />    
        
        
       <EditText 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:inputType="text"
        android:layout_marginTop="415dp"
        android:layout_marginLeft="1035dp"
        android:hint="@string/tip"
        android:textSize="25sp"
        
           />
    
        <TextView
        style="@style/main_button_tablet"
        android:layout_marginTop="450dp"
        android:gravity="left"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@color/tap_color"
        android:padding="10dp"
        android:text="@string/bill_details_final"
        android:textSize="25sp" />    

</RelativeLayout>