<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@android:color/black"
        android:padding="10dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="Menu"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/username"
            />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:alpha="0.8"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <LinearLayout style="@style/button_background">

            <Button
                android:id="@+id/button1"
                android:text="@string/order"
                android:layout_gravity="center"
                style="@style/medium_button"
                android:onClick="orderFood" />
        </LinearLayout>

        <LinearLayout style="@style/button_background">

            <Button
                android:id="@+id/button2"
                android:text="@string/checkout"
                android:layout_gravity="center"
                style="@style/medium_button"
                android:onClick="checkoutToPay" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>